@@ -260,9 +260,10 @@
     <branch id="HEAD"/>
   </module>
   <module id="evolution-webcal">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="fast-user-switch-applet">
     <branch id="HEAD" stringfrozen="true"/>
