@@ -1,3 +1,9 @@
+2007-03-14  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched evolution-webcal and changed category of
+	network-manager-applet.
+
 2007-03-13  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
